# yc-bio-ai-hack

./: .env.example  .gitignore  README.md  hackathon.md  package.json  pyproject.toml  requirements.txt
app/: __init__.py  cases.py  config.py  main.py  models.py  simulator.py  storage.py  tamarind.py
biorl/: README.md  demo-prompt.md  generate_raw_graph.py  index.html  script.js  styles.css  table.md
biorl/bio_smiles_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
biorl/bio_smiles_env/server/: Dockerfile  __init__.py  app.py  bio_smiles_env_environment.py
data/artifacts/: egfr-c797s-blu945.json  egfr-c797s-osimertinib.json  egfr-wt-osimertinib.json  met-bypass-map.json  met-combo-rationale.json
fileverse/: .env.example  .gitignore  package-lock.json  tsconfig.app.json  vite.config.ts
fileverse/src/: styles.css
pocketverse/: README.md  index.html
pocketverse/src/: App.tsx
pocketverse/src/data/: pocketData.ts
pocketverse/src/lib/: gemini.ts
scripts/: precompute_tamarind.py
src/: App.tsx  styles.css
src/data/: pocketData.ts
src/lib/: pocketverse-scene.ts
static/: app.js  index.html  styles.css
tests/: test_api.py
